--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -8,7 +8,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>Index</servlet-name>
 		<servlet-class>es.upm.dit.isst.process.IndexServlet</servlet-class>
 	</servlet>
-	<servlet-mapping>
+	<servlet-mapping> bien
 		<servlet-name>Index</servlet-name>
 		<url-pattern>/index</url-pattern>
 	</servlet-mapping>-->
